--- a/register.css
+++ b/register.css
@@ -15,7 +15,7 @@ label {
     float: right;
     position: static;
 }
-.c20 {
+/* .c20 {
         border-radius: 5px;
     float: right;
     width: 20%;
@@ -24,4 +24,4 @@ label {
         border-radius: 5px;
     float: right;
     width: 60%;
-}
+} */
